// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id    Int     @id @default(autoincrement())
  email String  @unique
  password_hash String
  first_name  String
  last_name  String
  role Role @default(CUSTOMER)
  orders Order[]
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
}

enum Role {
  CUSTOMER
  WAITER
  MANAGER
}

model MenuItem {
  id          Int     @id @default(autoincrement())
  name        String
  description String
  price       Float
  is_available Boolean @default(true)
  orderItems OrderItem[]
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
}

model Order {
  id        Int      @id @default(autoincrement())
  address   String
  date      DateTime
  status    OrderStatus @default(PENDING)
  userId    Int
  user      User     @relation(fields: [userId], references: [id])
  items OrderItem[]
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
}

model OrderItem {
  id         Int      @id @default(autoincrement())
  quantity   Int
  orderId    Int
  menuItemId Int
  order      Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  menuItem   MenuItem @relation(fields: [menuItemId], references: [id])
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
}

enum OrderStatus {
  PENDING
  CONFIRMED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}
