//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  password_hash String [not null]
  first_name String [not null]
  last_name String [not null]
  role Role [not null, default: 'CUSTOMER']
  orders Order [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table MenuItem {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  price Float [not null]
  is_available Boolean [not null, default: true]
  orderItems OrderItem [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Order {
  id Int [pk, increment]
  address String [not null]
  date DateTime [not null]
  status OrderStatus [not null, default: 'PENDING']
  userId Int [not null]
  user User [not null]
  items OrderItem [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table OrderItem {
  id Int [pk, increment]
  quantity Int [not null]
  orderId Int [not null]
  menuItemId Int [not null]
  order Order [not null]
  menuItem MenuItem [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Enum Role {
  CUSTOMER
  WAITER
  MANAGER
}

Enum OrderStatus {
  PENDING
  CONFIRMED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Ref: Order.userId > User.id

Ref: OrderItem.orderId > Order.id [delete: Cascade]

Ref: OrderItem.menuItemId > MenuItem.id